# rumble

./: .gitattributes  .gitignore  Makefile  README.md  benchmark.sh  plot.py  pom.xml  pyproject.toml
.github/workflows/: maven.yml
results/: confusion.csv  confusion_g.csv  confusion_o.csv  git.csv  git_g.csv  git_o.csv  hreddit.csv  hreddit_g.csv  hreddit_o.csv  reddit.csv  reddit_2.csv  reddit_2_g.csv  reddit_2_o.csv  reddit_3.csv  reddit_3_g.csv  reddit_3_o.csv  reddit_g.csv  reddit_o.csv  students.csv
src/main/java/org/rumbledb/api/: Item.java
src/main/java/org/rumbledb/benchmark/: Main.java
src/main/java/org/rumbledb/config/: RumbleRuntimeConfiguration.java
src/main/java/org/rumbledb/items/: AnyURIItem.java  Base64BinaryItem.java  BooleanItem.java  DateItem.java  DateTimeItem.java  DecimalItem.java  DoubleItem.java  DurationItem.java  FloatItem.java  HexBinaryItem.java  IntItem.java  NullItem.java  (+3 more)
src/test/java/decimalgamma/: Main.java
src/test/java/iq/: RuntimeTests.java  SparkRuntimeTests.java
src/test/resources/benchmark/datasets/: .gitattributes  .gitignore  confusion.txt  datasets.md  git-archive.json  reddit.sh  reddit.txt  students.json
src/test/resources/benchmark/queries/: confusion.jq  confusion_g.jq  confusion_o.jq  git.jq  git_g.jq  git_o.jq  hreddit.jq  hreddit_g.jq  hreddit_o.jq  query.jq  query2.jq  reddit.jq  reddit_2.jq  reddit_2_g.jq  reddit_2_o.jq  reddit_3.jq  reddit_3_g.jq  reddit_3_o.jq  reddit_o.jq  students.jq  test.jq
src/test/resources/datasets/: movies.json
src/test/resources/test_files/runtime-spark/: OrderByElwin.jq
(+11 files in other folders)
