[tool.poetry]
name = "rumble"
version = "0.1.0"
description = ""
authors = ["Elwin Stephan <elwin.stephan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
